example/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: hw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007 #pin nodeport to persist the ingress domain 
  type: NodePort
